[gd_scene load_steps=23 format=2]

[ext_resource path="res://Levels/World.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/playerKinematic.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera/ForwardLookingCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera/HeadCamCollider.gd" type="Script" id=5]
[ext_resource path="res://Camera/CamCollider.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/ParallaxBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/Background Music/BackgroundMusic.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/Level.gd" type="Script" id=9]
[ext_resource path="res://Enviroment/Speedboost/Speedboost.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enviroment/Datastrings/Lasers.gd" type="Script" id=11]
[ext_resource path="res://Enviroment/Datastrings/Laser_0.tscn" type="PackedScene" id=12]
[ext_resource path="res://Enviroment/Datastrings/Laser_1.tscn" type="PackedScene" id=13]
[ext_resource path="res://Enviroment/Collectibles/Collectible.tscn" type="PackedScene" id=14]
[ext_resource path="res://Enviroment/FinishLine/FinishArea.tscn" type="PackedScene" id=15]
[ext_resource path="res://Tileset/Tileset_up_to_date.tres" type="TileSet" id=16]
[ext_resource path="res://UI/UI.gd" type="Script" id=17]
[ext_resource path="res://Scenes/Pause Menu/PauseMenu.tscn" type="PackedScene" id=18]
[ext_resource path="res://UI/color indicator/ColorIndicator.tscn" type="PackedScene" id=19]
[ext_resource path="res://UI/Fullspeed Mode/FullspeedMode.tscn" type="PackedScene" id=20]
[ext_resource path="res://UI/Collectibles/CollectiblesCollected.tscn" type="PackedScene" id=21]
[ext_resource path="res://UI/Timer/Timer.tscn" type="PackedScene" id=22]

[node name="Level" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Player" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="player" parent="Player" index="0" instance=ExtResource( 3 )]

position = Vector2( -234.614, 1065.2 )
WALK_MAX_SPEED = 1500
FULLSPEED_MAX_SPEED = 2000

[node name="ForwardLookingCamera" parent="Player" index="1" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="HeadCamCollider" type="Node2D" parent="Player/ForwardLookingCamera" index="2"]

editor/display_folded = true
script = ExtResource( 5 )
FIXED_CAMERA = false
CURRENT_ANCHOR = 0

[node name="CamCollider" parent="Player/ForwardLookingCamera/HeadCamCollider" index="0" instance=ExtResource( 6 )]

position = Vector2( 1338.48, -186.5 )
collision_layer = 0
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
FIXED_CAMERA = false

[node name="CamCollider2" parent="Player/ForwardLookingCamera/HeadCamCollider" index="1" instance=ExtResource( 6 )]

position = Vector2( 1622.46, 330.647 )
scale = Vector2( 1.29804, 1 )
collision_layer = 0
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="ParallaxBackground" parent="Player" index="2" instance=ExtResource( 7 )]

[node name="BackgroundMusic" parent="Player" index="3" instance=ExtResource( 8 )]

[node name="Level" type="Node" parent="." index="1"]

script = ExtResource( 9 )

[node name="Speedboosters" type="Node2D" parent="Level" index="0"]

position = Vector2( -803.782, 886.093 )

[node name="Speedboost" parent="Level/Speedboosters" index="0" instance=ExtResource( 10 )]

position = Vector2( 1437.35, -587.667 )
SPEED = 4000
LENGTH = 10.0

[node name="Lasers" type="Node2D" parent="Level" index="1"]

position = Vector2( 1457.38, -2001.32 )
script = ExtResource( 11 )

[node name="LaserOrange" parent="Level/Lasers" index="0" instance=ExtResource( 12 )]

position = Vector2( -550.226, 3175.73 )
rotation = -1.5708

[node name="LaserOrange2" parent="Level/Lasers" index="1" instance=ExtResource( 12 )]

position = Vector2( -294.226, 3175.73 )
rotation = -1.5708

[node name="LaserOrange3" parent="Level/Lasers" index="2" instance=ExtResource( 12 )]

position = Vector2( -38.2258, 3175.73 )
rotation = -1.5708

[node name="LaserBlau" parent="Level/Lasers" index="3" instance=ExtResource( 13 )]

position = Vector2( -1390.11, 3041.76 )

[node name="Collectibles" type="Node2D" parent="Level" index="2"]

editor/display_folded = true
position = Vector2( 660.131, -1882.08 )

[node name="Collectible" parent="Level/Collectibles" index="0" instance=ExtResource( 14 )]

position = Vector2( 1200.44, 107.52 )
scale = Vector2( 0.0348979, 0.0470226 )

[node name="FinishArea" parent="Level" index="3" instance=ExtResource( 15 )]

visible = false
position = Vector2( 3805.09, 77.8135 )

[node name="TileMap" type="TileMap" parent="Level" index="4"]

position = Vector2( -884.856, 952.646 )
mode = 0
tile_set = ExtResource( 16 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 4
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -131065, 0, 0, -131059, 0, 0, -131058, 0, 0, -65529, 0, 0, -65523, 1610612739, 0, -65522, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 131227, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196656, 0, 0, 196657, 0, 0, 196658, 0, 0, 196659, 0, 0, 196660, 0, 0, 196661, 0, 0, 196662, 0, 0, 196663, 0, 0, 196664, 0, 0, 196665, 0, 0, 196666, 0, 0, 196667, 0, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 0, 0, 196678, 0, 0, 196679, 0, 0, 196680, 0, 0, 196681, 0, 0, 196682, 0, 0, 196683, 0, 0, 196684, 0, 0, 196685, 0, 0, 196686, 0, 0, 196687, 0, 0, 196688, 0, 0, 196689, 0, 0, 196690, 0, 0, 196691, 0, 0, 196692, 0, 0, 196693, 0, 0, 196694, 0, 0, 196695, 0, 0, 196696, 0, 0, 196697, 0, 0, 196698, 0, 0, 196699, 0, 0, 196700, 0, 0, 196701, 0, 0, 196702, 0, 0, 196703, 0, 0, 196704, 0, 0, 196705, 0, 0, 196706, 0, 0, 196707, 0, 0, 196708, 0, 0, 196709, 0, 0, 196710, 0, 0, 196711, 0, 0, 196712, 0, 0, 196713, 0, 0, 196714, 0, 0, 196715, 0, 0, 196716, 0, 0, 196717, 0, 0, 196718, 0, 0, 196719, 0, 0, 196720, 0, 0, 196721, 0, 0, 196722, 0, 0, 196723, 0, 0, 196724, 0, 0, 196725, 0, 0, 196726, 0, 0, 196727, 0, 0, 196728, 0, 0, 196729, 0, 0, 196730, 0, 0, 196731, 0, 0, 196732, 0, 0, 196733, 0, 0, 196734, 0, 0, 196735, 0, 0, 196736, 0, 0, 196737, 0, 0, 196738, 0, 0, 196739, 0, 0, 196740, 0, 0, 196741, 0, 0, 196742, 0, 0, 196743, 0, 0, 196744, 0, 0, 196745, 0, 0, 196746, 0, 0, 196747, 0, 0, 196748, 0, 0, 196749, 0, 0, 196750, 0, 0, 196751, 0, 0, 196752, 0, 0, 196753, 0, 0, 196754, 0, 0, 196755, 0, 0, 196756, 0, 0, 196757, 0, 0, 196758, 0, 0, 196759, 0, 0, 196760, 0, 0, 196761, 0, 0, 196762, 0, 0, 196763, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262204, 0, 0, 262205, 0, 0, 262206, 0, 0, 262207, 0, 0, 262208, 0, 0, 262209, 0, 0, 262210, 0, 0, 262211, 0, 0, 262212, 0, 0, 262213, 0, 0, 262214, 0, 0, 262264, 0, 0, 262265, 0, 0, 262266, 0, 0, 262284, 0, 0, 262285, 0, 0, 262286, 0, 0, 262287, 0, 0, 262288, 0, 0, 262289, 0, 0, 262290, 0, 0, 262291, 0, 0, 262292, 0, 0 )
_sections_unfolded = [ "Cell", "Collision", "Material", "Pause", "Transform", "Visibility" ]

[node name="UI" type="Node" parent="." index="2"]

editor/display_folded = true
script = ExtResource( 17 )

[node name="PauseMenu" parent="UI" index="0" instance=ExtResource( 18 )]

[node name="ColorIndicator" parent="UI" index="1" instance=ExtResource( 19 )]

[node name="FullspeedMode" parent="UI" index="2" instance=ExtResource( 20 )]

[node name="CollectiblesCollected" parent="UI" index="3" instance=ExtResource( 21 )]

COLLECTIBLES_IN_THIS_LEVEL = 1

[node name="Timer" parent="UI" index="4" instance=ExtResource( 22 )]

[connection signal="is_at_fullspeed" from="Player/player" to="." method="_on_player_is_at_fullspeed"]

[connection signal="is_not_at_fullspeed" from="Player/player" to="." method="_on_player_is_not_at_fullspeed"]

[connection signal="switched_color_to_orange" from="Player/player" to="." method="_on_player_switched_color_to_orange"]

[connection signal="switched_color_to_purple" from="Player/player" to="." method="_on_player_switched_color_to_purple"]

[connection signal="new_camera" from="Player/ForwardLookingCamera/HeadCamCollider/CamCollider" to="Player/ForwardLookingCamera/HeadCamCollider" method="_on_CamCollider_new_camera"]

[connection signal="new_camera" from="Player/ForwardLookingCamera/HeadCamCollider/CamCollider2" to="Player/ForwardLookingCamera/HeadCamCollider" method="_on_CamCollider_new_camera"]

[connection signal="speedboost_start" from="Level/Speedboosters/Speedboost" to="." method="_on_Speedboost_speedboost_start"]

[connection signal="speedboost_stop" from="Level/Speedboosters/Speedboost" to="." method="_on_Speedboost_speedboost_stop"]

[connection signal="laser_entered" from="Level/Lasers" to="." method="_on_Lasers_laser_entered"]

[connection signal="laser_exited" from="Level/Lasers" to="." method="_on_Lasers_laser_exited"]

[connection signal="laser_entered" from="Level/Lasers/LaserOrange" to="Level/Lasers" method="_on_LaserOrange_laser_entered"]

[connection signal="laser_exited" from="Level/Lasers/LaserOrange" to="Level/Lasers" method="_on_LaserOrange_laser_exited"]

[connection signal="laser_entered" from="Level/Lasers/LaserOrange2" to="Level/Lasers" method="_on_LaserOrange_laser_entered"]

[connection signal="laser_exited" from="Level/Lasers/LaserOrange2" to="Level/Lasers" method="_on_LaserOrange_laser_exited"]

[connection signal="laser_entered" from="Level/Lasers/LaserOrange3" to="Level/Lasers" method="_on_LaserOrange_laser_entered"]

[connection signal="laser_exited" from="Level/Lasers/LaserOrange3" to="Level/Lasers" method="_on_LaserOrange_laser_exited"]

[connection signal="laser_entered" from="Level/Lasers/LaserBlau" to="Level/Lasers" method="_on_LaserBlau_laser_entered"]

[connection signal="laser_exited" from="Level/Lasers/LaserBlau" to="Level/Lasers" method="_on_LaserBlau_laser_exited"]

[connection signal="collected" from="Level/Collectibles/Collectible" to="." method="_on_Collectible_collected"]

[connection signal="finish_line_passed" from="Level/FinishArea" to="." method="_on_FinishArea_finish_line_passed"]


